--- a/EmpInfo/Views/Apply/CheckEPApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckEPApply.cshtml
@@ -1,6 +1,6 @@
 ﻿@using EmpInfo.Models;
 @{
-    ei_epApply ep = (ei_epApply)ViewData["ep"];
+    ei_epApply ep = ViewData["am"] as ei_epApply;
 }
 @section CSS{
     <style type="text/css">
@@ -16,7 +16,7 @@
     <script>        
         $("#flowRecordBt").on("click", function () {
             var box = $("<div></div>");
-            $(box).load("@Url.Content("~/Apply/CheckFlowRecord") .list-group", { sysNo: "@ep.sys_no" }, function () {
+            $(box).load("CheckFlowRecord .list-group", { sysNo: "@ep.sys_no" }, function () {
                 openMessageDialog($(box).html(), "查看流转记录");
             });
         });
@@ -30,7 +30,7 @@
                     <li><span class="glyphicon glyphicon-hand-right"></span></li>
                     <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
                     <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-                    <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=EP")">设备故障报修单</a></li>
+                    <li><a href="ApplyIndex?billType=EP">设备故障报修单</a></li>
                     <li class="active">查看详情</li>
                 </ol>
             </div>
