--- a/EmpInfo/Views/Home/DormGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/DormGroupIndex.cshtml
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="col-xs-4 col-sm-3 col-md-2">
-                <a href="@Url.Content("~/Apply/DormRepairIndex")">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=DP")">
                     <img src="@Url.Content("~/Content/images/repair.png")" alt="repair" class="center-block" />
                     <p class="text-center">宿舍维修申请</p>
                 </a>
