--- a/EmpInfo/Views/Report/CRReport.cshtml
+++ b/EmpInfo/Views/Report/CRReport.cshtml
@@ -222,6 +222,7 @@
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
             <li><a href="@Url.Content("~/Home/EleProcess")">电子公司专用流程</a></li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=CR")">考勤补记申请单</a></li>
             <li class="active">考勤补记报表</li>
         </ol>
     </div>
