--- a/EmpInfo/Views/Apply/BeginApplyAL.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyAL.cshtml
@@ -1,10 +1,9 @@
 ﻿@using EmpInfo.Models;
+@using Newtonsoft.Json;
 @{
-    List<ei_empLevel> empLevels = (List<ei_empLevel>)ViewData["pLevels"];
-    int empLevel = -1;
-    if (ViewData["empLevel"] != null) {
-        empLevel = (int)ViewData["empLevel"];
-    }
+    ALBeforeApplyModel ba = ViewData["infoBeforeApply"] as ALBeforeApplyModel;
+    List<ei_empLevel> empLevels = JsonConvert.DeserializeObject<List<ei_empLevel>>(ba.pLevels);
+    ba.empLevel = ba.empLevel ?? -1;      
 }
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
@@ -55,7 +54,7 @@
             minuteStep: 5,
         });
 
-        if ("@empLevel" < "7") {
+        if ("@ba.empLevel" < "7") {
             $("#directSpan").hide();
         }
 
@@ -231,7 +230,7 @@
         var formParam = $("#alForm").serialize();
         $.ajax({
             type: 'post',
-            url: '@Url.Content("~/Apply/GetALFlowQueue")',
+            url: 'GetFlowQueue',
             data: formParam,
             cache: false,
             dataType: 'json',
@@ -257,20 +256,19 @@
                         $("#apply_bt").button("loading");
                         $.ajax({
                             type: 'post',
-                            url: '@Url.Content("~/Apply/SaveApplyAL")',
+                            url: 'SaveApply',
                             data: formParam + "&auditor_queues=" + JSON.stringify(queue),
                             cache: false,
                             dataType: 'json',
                             success: function (data) {
                                 $("#apply_bt").button("reset");
                                 if (data.suc) {
-                                    toastr.success("提交成功:" + data.msg);
-                                    setTimeout(function () { window.location.href = "@Url.Content("~/Apply/ApplyIndex?billType=AL")"; }, 2000);
+                                    toastr.success(data.msg);
+                                    setTimeout(function () { window.location.href = "ApplyIndex?billType=AL"; }, 2000);
                                 } else {
                                     toastr.error("提交失败：" + data.msg);
                                     $("#apply_bt").button("reset");
                                 }
-
                             }
                         });
                     }, "审批流程预览", "返回修改", "确认提交");
@@ -395,7 +393,7 @@
                     <li><span class="glyphicon glyphicon-hand-right"></span></li>
                     <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
                     <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-                    <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=AL")">请假申请单</a></li>
+                    <li><a href="ApplyIndex?billType=AL">请假申请单</a></li>
                     <li class="active">开始申请</li>
                 </ol>
             </div>
@@ -406,8 +404,7 @@
                             <button class="btn btn-block btn-default" disabled>申请流水号</button>
                         </span>
                         <span style="display:inline-block;width:70%">
-                            <input type="text" class="form-control" id="sysNum" value="@ViewData["sysNum"]" disabled />
-                            <input type="hidden" name="sys_no" value="@ViewData["sysNum"]" />
+                            <input type="text" class="form-control" name="sys_no" id="sysNum" value="@ba.sysNum" readonly />
                         </span>
                     </div>
                     <div class="b-div">
@@ -416,11 +413,11 @@
                         </span>
                         <div style="display:inline-block;width:70%">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="eDepName" name="dep_long_name" value="@ViewData["depName"]" placeholder="点击此处选择部门"/>
+                                <input type="text" class="form-control" id="eDepName" name="dep_long_name" value="@ba.depName" placeholder="点击此处选择部门"/>
                                 <span class="input-group-addon" style="cursor:pointer;" onclick="showDepName()"><i class="fa fa-info text-danger"></i></span>
                             </div>
-                            <input type="hidden" id="eDepNum" name="dep_no" value="@ViewData["depNum"]" />
-                            <input type="hidden" id="eDepId" name="dep_id" value="@ViewData["depId"]" />
+                            <input type="hidden" id="eDepNum" name="dep_no" value="@ba.depNum" />
+                            <input type="hidden" id="eDepId" name="dep_id" value="@ba.depId" />
                         </div>
                         <p class="small text-danger"><i class="fa fa-info-circle"></i> 请准确选择所属部门,一年内选错三次将被禁止申请</p>
                     </div>
@@ -432,7 +429,7 @@
                             <select class="form-control" id="eLevel" name="emp_level">
                                 <option></option>
                                 @foreach (var el in empLevels) {
-                                    if (el.level_no == empLevel) {
+                                    if (el.level_no == ba.empLevel) {
                                         <option value="@el.level_no" selected="selected">@el.level_name</option>
                                     }
                                     else {
@@ -465,8 +462,8 @@
                                     }
                                 }
                             </span>
-                            <p class="small text-danger" style="margin:4px 0;"><i class="fa fa-info-circle"></i> 最近30天累计请假 @ViewData["times"] 次，合计 @ViewData["days"] 天 @ViewData["hours"] 小时。</p>
-                            <p class="small text-danger" style="display:none;" id="vacationInfo"><i class="fa fa-info-circle"></i> 你当前年休假天数剩余 @ViewData["vacationDaysLeft"] 天 </p>
+                            <p class="small text-danger" style="margin:4px 0;"><i class="fa fa-info-circle"></i> 最近30天累计请假 @ba.times 次，合计 @ba.days 天 @ba.hours 小时。</p>
+                            <p class="small text-danger" style="display:none;" id="vacationInfo"><i class="fa fa-info-circle"></i> 你当前年休假天数剩余 @ba.vacationDaysLeft 天 </p>
                         </div>
                     </div>
                     <div class="b-div" style="vertical-align:middle;">
