--- a/EmpInfo/Views/Apply/BeginApplySV.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySV.cshtml
@@ -1,5 +1,7 @@
 ﻿@using EmpInfo.Models;
-
+@{
+    CRSVBeforeApplyModel m = ViewData["infoBeforeApply"] as CRSVBeforeApplyModel;
+}
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
 
@@ -134,7 +136,7 @@
         var formParam = $("#alForm").serialize();
         $.ajax({
             type: 'post',
-            url: '@Url.Content("~/Apply/GetSVFlowQueue")',
+            url: 'GetFlowQueue',
             data: formParam,
             cache: false,
             dataType: 'json',
@@ -154,7 +156,7 @@
                         $("#apply_bt").button("loading");
                         $.ajax({
                             type: 'post',
-                            url: '@Url.Content("~/Apply/SaveApplySV")',
+                            url: 'SaveApply',
                             data: formParam + "&auditor_queues=" + JSON.stringify(queue),
                             cache: false,
                             dataType: 'json',
@@ -162,7 +164,7 @@
                                 $("#apply_bt").button("reset");
                                 if (data.suc) {
                                     toastr.success("提交成功:" + data.msg);
-                                    setTimeout(function () { window.location.href = "@Url.Content("~/Apply/ApplyIndex?billType=SV")"; }, 2000);
+                                    setTimeout(function () { window.location.href = "ApplyIndex?billType=SV"; }, 2000);
                                 } else {
                                     toastr.error("提交失败：" + data.msg);
                                     $("#apply_bt").button("reset");
@@ -191,7 +193,7 @@
                     <li><span class="glyphicon glyphicon-hand-right"></span></li>
                     <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
                     <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-                    <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=SV")">调休申请单</a></li>
+                    <li><a href="ApplyIndex?billType=SV">调休申请单</a></li>
                     <li class="active">开始申请</li>
                 </ol>
             </div>
@@ -202,8 +204,7 @@
                             <button class="btn btn-block btn-default" disabled>申请流水号</button>
                         </span>
                         <span style="display:inline-block;width:70%">
-                            <input type="text" class="form-control" id="sysNum" value="@ViewData["sysNum"]" disabled />
-                            <input type="hidden" name="sys_no" value="@ViewData["sysNum"]" />
+                            <input type="text" class="form-control" name="sys_no" id="sysNum" value="@m.sysNum" readonly />
                         </span>
                     </div>
                     <div class="b-div">
@@ -212,11 +213,11 @@
                         </span>
                         <div style="display:inline-block;width:70%">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="eDepName" name="dep_long_name" value="@ViewData["depName"]" placeholder="点击此处选择部门" />
+                                <input type="text" class="form-control" id="eDepName" name="dep_long_name" value="@m.depName" placeholder="点击此处选择部门" />
                                 <span class="input-group-addon" style="cursor:pointer;" onclick="showDepName()"><i class="fa fa-info text-danger"></i></span>
                             </div>
-                            <input type="hidden" id="eDepNum" name="dep_no" value="@ViewData["depNum"]" />
-                            <input type="hidden" id="eDepId" name="dep_id" value="@ViewData["depId"]" />
+                            <input type="hidden" id="eDepNum" name="dep_no" value="@m.depNum" />
+                            <input type="hidden" id="eDepId" name="dep_id" value="@m.depId" />
                         </div>
                     </div>
                     <div class="b-div" style="vertical-align:middle;">
@@ -282,7 +283,6 @@
 </div>
 @section Modal {
     @Html.Partial("_SelectDep")
-    @Html.Partial("_SelectUsers")
     @Html.Partial("_ConfirmDialog")
     @Html.Partial("_MessageDialog")
 }
