--- a/EmpInfo/Views/Apply/GetMyAuditedList.cshtml
+++ b/EmpInfo/Views/Apply/GetMyAuditedList.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using EmpInfo.Models
+@{
     List<EmpInfo.FlowSvr.FlowAuditListModel> list = (List<EmpInfo.FlowSvr.FlowAuditListModel>)ViewData["list"];
 }
 @section CSS{
@@ -55,7 +56,7 @@
         });
 
         $("#checkBt").on("click", function () {
-            window.location.href = "@Url.Content("~/Apply/CheckMyAuditedList?")"
+            window.location.href = "CheckMyAuditedList?"
             + "billType=" + "@ViewData["billType"]" + "&"
                 + "fromDate=" + $("#from_date").val() + "&"
                 + "toDate=" + $("#to_date").val() + "&"
@@ -81,7 +82,10 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
-            <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
+            @foreach (var n in (ViewData["navigatorLinks"] as List<ApplyNavigatorModel>)) {
+                <li><a href="@string.Concat(Url.Content("~/"),n.url)">@n.text</a></li>
+            }            
+            <li><a href="@string.Concat("ApplyIndex?billType=", ViewData["billType"])">@ViewData["billTypeName"]</a></li>
             <li class="active">我的已办</li>
         </ol>
     </div>
