--- a/EmpInfo/Views/Report/EPReport.cshtml
+++ b/EmpInfo/Views/Report/EPReport.cshtml
@@ -6,25 +6,8 @@
 @section CSS{
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <style type="text/css">
-        .tdText {
-            text-align: right;
-            font-style: italic;
-            padding-right: 10px;
-        }
-
-        .b-label {
-            display: inline-block;
-            width: 80px;
-            vertical-align: top;
-            color: gray;
-        }
-
-        .b-div {
-            margin: 6px 0;
-        }
-
-        .dateSpan, .dayTime {
-            cursor: pointer;
+        .lbText {            
+            font-style: italic;            
         }
     </style>
 }
@@ -154,18 +137,18 @@
     <div class="panel-body">
         <i class="text-danger"> <i class="fa fa-info-circle"></i> 输入查询条件之后，可查询或导出excel报表:</i>
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top:6px;">
                 <div class="lbText">资产编号：</div>
                 <input type="text" class="form-control" id="propertyNumber" value="@param.propertyNumber" />
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top:6px;">
                 <div class="lbText">起始日期：</div>
                 <div class="input-group date form_date" id="fromDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                     <input class="form-control" type="text" id="from_date" name="from_date" placeholder="请输入报修起始日期" readonly value="@param.fromDate">
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
+            <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top:6px;">
                 <div class="lbText">结束日期：</div>                
                 <div class="input-group date form_date" id="toDatePicker1">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
@@ -195,62 +178,6 @@
                 <input type="text" class="form-control" id="procDepName" value="@param.procDepName" />
             </div>
         </div>
-        @*<table style="width:100%;margin-bottom:12px;">
-            <tr>
-                <td style="width:10%;" class="tdText">
-                    资产编号：
-                </td>
-                <td style="width:30%;">
-                    <input type="text" class="form-control" id="propertyNumber" style="margin-top:6px;" value="@param.propertyNumber" />
-                </td>
-                <td style="width:10%;" class="tdText">
-                    起始日期：
-                </td>
-                <td style="width:20%;">
-                    <div class="input-group date form_date" style="margin:6px 0;" id="fromDatePicker1">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                        <input class="form-control" type="text" id="from_date" name="from_date" placeholder="请输入报修起始日期" readonly value="@param.fromDate">
-                    </div>
-                </td>
-                <td style="width:10%;" class="tdText">
-                    结束日期：
-                </td>
-                <td style="width:20%;">
-                    <div class="input-group date form_date" style="margin:6px 0;" id="toDatePicker1">
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
-                        <input class="form-control" type="text" id="to_date" name="to_date" placeholder="请输入报修结束日期" readonly value="@param.toDate">
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="tdText">
-                    流程状态：
-                </td>
-                <td>
-                    <select class="form-control" id="applyStatus" name="applyStatus">
-                        <option value="所有">所有</option>
-                        <option value="未接单">未接单</option>
-                        <option value="维修中">维修中</option>
-                        <option value="未评价">未评价</option>
-                        <option value="未打分">未打分</option>
-                        <option value="已完成">已完成</option>
-                        <option value="已撤销">已撤销</option>
-                        <option value="拒接">拒接</option>
-                        <option value="延迟处理">延迟处理</option>
-                    </select>
-                </td>
-                <td class="tdText">
-                    设备支部：
-                </td>
-                <td>
-                    <input type="text" class="form-control" id="equitmentDepName" value="@param.equitmentDepName" />
-                </td>
-                <td class="tdText">
-                    生产车间：
-                </td>
-                <td><input type="text" class="form-control" id="procDepName" value="@param.procDepName" /> </td>
-            </tr>
-        </table>*@
         <div class="btn-group btn-group-justified" role="group" style="margin-top:8px;">
             <div class="btn-group" role="group">
                 <button class="btn btn-primary" id="epCheckBt" data-loading-text="搜索中..."><i class="fa fa-search"></i> 搜索</button>
